--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@ title: Home
 
 {% if page.url == "/" %}
 
+<section class="presentation">
+    <div class="row">
+        Blog d'une fan de budget
+    </div>
+</section>
+
+
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
     <div class="section-title">
-        <h2><span>Featured</span></h2>
+
+        <h2><span>Commencez ici</span></h2>
+
     </div>
     <div class="row">
 
@@ -34,7 +43,7 @@ title: Home
 
     <div class="section-title">
 
-        <h2><span>All Stories</span></h2>
+        <h2><span>Tous les articles</span></h2>
 
     </div>
 
