--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ title: Home
 
 <section class="presentation">
     <div class="row">
-        Blog d'une fan de budget
+        <p>Blog d'une fan de budget</p>
+        <p>et de bien d'autres choses... que mon budget m'aide à réaliser</p>
     </div>
 </section>
 
