display all articles

--- a/index.html
+++ b/index.html
@@ -49,22 +49,17 @@ title: Home
 
     <div class="row listrecent">
 
-        {% for post in paginator.posts %}
+        {% for post in site.posts %}
 
-        {% include postbox.html %}
+        {% if post.hidden != true %}
+
+            {% include postbox.html %}
+        
+        {% endif %}
 
         {% endfor %}
 
     </div>
 
 </section>
-
-<!-- Pagination
-================================================== -->
-<div class="bottompagination">
-<div class="pointerup"><i class="fa fa-caret-up"></i></div>
-<span class="navigation" role="navigation">
-    {% include pagination.html %}
-</span>
-</div>
 
